// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnalysesToolbar /> should render with [canModify=false] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    value="baz"
  />
  <Button
    bsStyle="primary"
    disabled={true}
    icon="plus-square fa-fw"
    onClick={[Function]}
    pullRight={false}
    tip="New Analysis"
    tipPlacement="top"
  />
</Toolbar>
`;

exports[`<AnalysesToolbar /> should render with default props 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    value="baz"
  />
  <Button
    bsStyle="primary"
    disabled={false}
    icon="plus-square fa-fw"
    onClick={[Function]}
    pullRight={false}
    tip="New Analysis"
    tipPlacement="top"
  />
</Toolbar>
`;
